--- a/WineCellar/.classpath
+++ b/WineCellar/.classpath
@@ -14,5 +14,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="lib" path="/lib/google-gson-2.2.1/gson-2.2.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
