--- a/WineCellar/.classpath
+++ b/WineCellar/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/lib/google-gson-2.2.1/gson-2.2.1.jar"/>
+	<classpathentry kind="lib" path="/lib/Guava-13.0.1/guava-13.0.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
