added some new mobile support

--- a/WineCellar/WebContent/WEB-INF/web.xml
+++ b/WineCellar/WebContent/WEB-INF/web.xml
@@ -1,91 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>WineCellar</display-name>
-  <welcome-file-list>
-	<welcome-file>pages/main.jsp</welcome-file>
-  </welcome-file-list>
-  <servlet>
-    <display-name>Apache-Axis Servlet</display-name>
-    <servlet-name>AxisServlet</servlet-name>
-    <servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AxisServlet</servlet-name>
-    <url-pattern>/servlet/AxisServlet</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AxisServlet</servlet-name>
-    <url-pattern>*.jws</url-pattern>
-  </servlet-mapping>
-  <servlet-mapping>
-    <servlet-name>AxisServlet</servlet-name>
-    <url-pattern>/services/*</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <display-name>Axis Admin Servlet</display-name>
-    <servlet-name>AdminServlet</servlet-name>
-    <servlet-class>org.apache.axis.transport.http.AdminServlet</servlet-class>
-    <load-on-startup>100</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>AdminServlet</servlet-name>
-    <url-pattern>/servlet/AdminServlet</url-pattern>
-  </servlet-mapping>
-   
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee" xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>WineCellar</display-name>
+	<welcome-file-list>
+		<welcome-file>pages/main.jsp</welcome-file>
+	</welcome-file-list>
+	<servlet>
+		<display-name>Apache-Axis Servlet</display-name>
+		<servlet-name>AxisServlet</servlet-name>
+		<servlet-class>org.apache.axis.transport.http.AxisServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/servlet/AxisServlet</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>*.jws</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>AxisServlet</servlet-name>
+		<url-pattern>/services/*</url-pattern>
+	</servlet-mapping>
+	<servlet>
+		<display-name>Axis Admin Servlet</display-name>
+		<servlet-name>AdminServlet</servlet-name>
+		<servlet-class>org.apache.axis.transport.http.AdminServlet</servlet-class>
+		<load-on-startup>100</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>AdminServlet</servlet-name>
+		<url-pattern>/servlet/AdminServlet</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-  	<servlet-name>getLookupData</servlet-name>
-  	<servlet-class>lka.wine.servlets.LookupDataServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>getLookupData</servlet-name>
-  	<url-pattern>/getLookupData</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>mobilePage</servlet-name>
+		<jsp-file>/pages/mobile.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>mobilePage</servlet-name>
+		<url-pattern>/mobile</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-  	<servlet-name>getWines</servlet-name>
-  	<servlet-class>lka.wine.servlets.WineServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>getWines</servlet-name>
-  	<url-pattern>/getWines</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>getLookupData</servlet-name>
+		<servlet-class>lka.wine.servlets.LookupDataServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getLookupData</servlet-name>
+		<url-pattern>/getLookupData</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-  	<servlet-name>getWineSummary</servlet-name>
-  	<servlet-class>lka.wine.servlets.WineSummaryServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>getWineSummary</servlet-name>
-  	<url-pattern>/getWineSummary</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>getWines</servlet-name>
+		<servlet-class>lka.wine.servlets.WineServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getWines</servlet-name>
+		<url-pattern>/getWines</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-  	<servlet-name>getWineDetails</servlet-name>
-  	<servlet-class>lka.wine.servlets.WineDetailsServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>getWineDetails</servlet-name>
-  	<url-pattern>/getWineDetails</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>getWineSummary</servlet-name>
+		<servlet-class>lka.wine.servlets.WineSummaryServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getWineSummary</servlet-name>
+		<url-pattern>/getWineSummary</url-pattern>
+	</servlet-mapping>
 
-  <servlet>
-  	<servlet-name>WineCellar</servlet-name>
-  	<servlet-class>lka.wine.servlets.WineCellarServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>WineCellar</servlet-name>
-  	<url-pattern>/WineCellar</url-pattern>
-  </servlet-mapping>
+	<servlet>
+		<servlet-name>getWineDetails</servlet-name>
+		<servlet-class>lka.wine.servlets.WineDetailsServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getWineDetails</servlet-name>
+		<url-pattern>/getWineDetails</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>WineCellar</servlet-name>
+		<servlet-class>lka.wine.servlets.WineCellarServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>WineCellar</servlet-name>
+		<url-pattern>/WineCellar</url-pattern>
+	</servlet-mapping>
 
 
-  <servlet>
-  	<servlet-name>getImage</servlet-name>
-  	<servlet-class>lka.wine.servlets.ImageServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-  	<servlet-name>getImage</servlet-name>
-  	<url-pattern>/getImage</url-pattern>
-  </servlet-mapping>
-  
+	<servlet>
+		<servlet-name>getImage</servlet-name>
+		<servlet-class>lka.wine.servlets.ImageServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>getImage</servlet-name>
+		<url-pattern>/getImage</url-pattern>
+	</servlet-mapping>
+
 </web-app>
