Added an example from http://www.vogella.com/articles/REST/article.html#installation_jersey about using jersey to create restful web services

--- a/WineCellar/WebContent/WEB-INF/web.xml
+++ b/WineCellar/WebContent/WEB-INF/web.xml
@@ -7,6 +7,23 @@
 	<welcome-file-list>
 		<welcome-file>pages/main.jsp</welcome-file>
 	</welcome-file-list>
+
+
+	<servlet>
+		<servlet-name>Jersey REST Service</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>lka.wine.jersey.todo.resources</param-value>
+		</init-param>
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>Jersey REST Service</servlet-name>
+		<url-pattern>/rest/*</url-pattern>
+	</servlet-mapping>
+	
+	
 	<servlet>
 		<display-name>Apache-Axis Servlet</display-name>
 		<servlet-name>AxisServlet</servlet-name>
