--- a/WineCellar/.classpath
+++ b/WineCellar/.classpath
@@ -16,5 +16,9 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="/lib/google-gson-2.2.1/gson-2.2.1.jar"/>
 	<classpathentry kind="lib" path="/lib/Guava-13.0.1/guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="/lib/asm-3.3.1.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-core-1.15.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-server-1.15.jar"/>
+	<classpathentry kind="lib" path="/lib/jersey-bundle-1.15.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
