--- a/WineCellar/.gitignore
+++ b/WineCellar/.gitignore
@@ -1,9 +1,9 @@
 /build
-/.DS_Store
-/.classpath
-/.settings
-/.project
-.settings
-.classpath
-.project
+/*.DS_Store
+/*.classpath
+/*.settings
+/*.project
+*.settings
+*.classpath
+*.project
 
