--- a/WineCellar/src/AwsCredentials.properties
+++ b/WineCellar/src/AwsCredentials.properties
@@ -1,4 +1,7 @@
 #Insert your AWS Credentials from http://aws.amazon.com/security-credentials
 #Sun Oct 14 13:32:11 MDT 2012
-secretKey=N/qcvrdGTibvkWjZzOV4W1Hpy3uQe3WNVI/4Vkqo
-accessKey=AKIAJAVY2JNYLV4YPJWA
+
+#These properties should be put in catalina.properties
+
+#secretKey=
+#accessKey=
